# FuturePrediction

./: .gitignore  FuturePrediction.py  LICENSE  Pipfile  README.md  covid19.py  covid19_Param.py  pyproject.toml
_GetCmd/: getCovid19Data.cmd
