[project]
name = "futureprediction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kenichi Ikeda", email = "ken.i.tp@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "scipy>=1.10.1",
    "numpy>=1.24.4",
    "matplotlib>=3.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.5.1",
    "black>=23.9.0",
    "flake8>=5.0.4",
]

[tool.hatch.metadata]
allow-direct-references = true
